--- a/SendLater/Info.plist
+++ b/SendLater/Info.plist
@@ -36,5 +36,31 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+
+<key>NSAppTransportSecurity</key>
+<dict>
+    <key>NSExceptionDomains</key>
+    <dict>
+        <key>davidbieber.com</key>
+        <dict>
+            <key>NSIncludesSubdomains</key>
+            <true/>
+            
+            <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+            <true/>
+            
+            <key>NSTemporaryExceptionMinimumTLSVersion</key>
+            <string>1.0</string>
+            
+            <key>NSTemporaryExceptionRequiresForwardSecrecy</key>
+            <false/>
+
+            <key>NSTemporaryExceptionMinimumTLSVersion</key>
+            <string>TLSv1.1</string>
+        </dict>
+    </dict>
+</dict>
+
+
 </dict>
 </plist>
